syntax = "proto3";

package payment.v1;

option go_package = "./payment";

message Empty {}

message errorMessage {
    string errorMessage = 1;
    string errorCode = 2;
}

message StripeWebhookRequest {
    string eventType = 1;
    map<string, string> metadata = 2;
    optional errorMessage errorMessage = 3;
}


service PaymentService {
    rpc StripeWebhook(StripeWebhookRequest) returns (Empty);
}